--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "material-ui": "^0.16.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "react-router-component": "^0.36.4",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
