--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "material-ui": "^0.16.7",
     "react": "^15.4.2",
+    "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
     "react-router": "^2.4.0",
     "react-router-component": "^0.36.4",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "superagent": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
