We can now create user accounts

--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,11 @@
   "author": "Purdue IEEE",
   "license": "Apache 2.0",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mysql2": "^2.3.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
