--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-async-computed": "^3.9.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
