--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for the Purdue IEEE boilerbooks accounting software",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/app.js",
+    "serve": "nodemon --exec babel-node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Purdue IEEE",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "uuid": "^8.3.2"
   },
