--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "Apache 2.0",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
