--- a/nginx-ieee-money.conf
+++ b/nginx-ieee-money.conf
@@ -50,5 +50,9 @@ server {
 		proxy_hide_header Access-Control-Allow-Origin;
 		add_header Access-Control-Allow-Origin "http://localhost";
 	}
+
+	location / {
+		return 301 $scheme://$host/ui/;
+	}
 }
 
