--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jimp": "^0.16.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "uuid": "^8.3.2"
