--- a/api/.babelrc
+++ b/api/.babelrc
@@ -1,5 +1,20 @@
 {
-    "presets": [
-      "@babel/preset-env"
-    ]
+  "env": {
+    "development": {
+      "presets": [
+        "@babel/preset-env"
+      ]
+    },
+    "build": {
+        "presets": [
+          [
+          "@babel/preset-env",
+          {
+            "targets":{"node":"16"},
+            "modules": false
+          }
+        ]
+      ]
+    }
+  }
 }
