Started email stuff, requests now have email

--- a/api/.env.git
+++ b/api/.env.git
@@ -1,7 +1,17 @@
+# Port for the express server
 PORT=3000
+
+# Account creation pin
 ACCOUNT_PIN=example
+
+# MySQL user information
 DB_HOST=localhost
 DB_USER=user
 DB_PASS=password
 DB_DATABASE=database
+
+# Where the /receipts/ directory is located
 RECEIPT_BASEDIR=/example/path
+
+# Send emails on requests, approvals, completions, and reimbursements
+SEND_MAIL=yes
