--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "jimp": "^0.16.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
