Prepared for RC1

--- a/api/.env.git
+++ b/api/.env.git
@@ -14,4 +14,5 @@ DB_DATABASE=database
 RECEIPT_BASEDIR=/example/path
 
 # Send emails on requests, approvals, completions, and reimbursements
+# 'yes' to send, anything else to disable
 SEND_MAIL=yes
