Reset password done

--- a/api/.env.git
+++ b/api/.env.git
@@ -16,3 +16,7 @@ RECEIPT_BASEDIR=/example/path
 # Send emails on requests, approvals, completions, and reimbursements
 # 'yes' to send, anything else to disable
 SEND_MAIL=yes
+
+# The URL pointing to this server
+#  currently only used on password resets
+HTTP_HOST=localhost
