Fixed API urls and some minor bug fixes

--- a/ieee-money.conf
+++ b/ieee-money.conf
@@ -9,7 +9,7 @@ server {
 
 	server_name _;
 
-	location /api/ {
+	location /api/v2/ {
 		proxy_pass http://localhost:3000/;
 		proxy_redirect off;
 	}
