--- a/api/.babelrc
+++ b/api/.babelrc
@@ -11,7 +11,7 @@
           "@babel/preset-env",
           {
             "targets":{"node":"16"},
-            "modules": "commonjs"
+            "modules": false
           }
         ]
       ]
