--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,7 @@
   "name": "boilerbooks-ui",
   "version": "2.0.1",
   "private": true,
+  "license": "Apache 2.0",
   "scripts": {
     "serve": "vue-cli-service serve --port 3001",
     "build": "vue-cli-service build",
