--- a/ieee-money-prod.conf
+++ b/ieee-money-prod.conf
@@ -10,7 +10,7 @@ server {
 	server_name _;
 
 	location /api/v2/ {
-		proxy_pass http://localhost:3000/;
+		proxy_pass http://api:3000/;
 		proxy_redirect off;
 	}
 
