Fixed stuff for docker

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -8,4 +8,4 @@ RUN npm run build
 
 FROM nginx:1.21.6-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY ../ieee-money-prod.conf /etc/nginx/nginx.conf
+COPY ieee-money-prod.conf /etc/nginx/nginx.conf
