Reorder some files

--- a/ieee-money-prod.conf
+++ b/ieee-money-prod.conf
@@ -22,8 +22,7 @@ http {
 		listen 80 default_server;
 		listen [::]:80 default_server;
 
-		root /srv/boilerbooks;
-
+		root /usr/share/nginx/html;
 		index index.html;
 
 		server_name _;
@@ -40,6 +39,10 @@ http {
 
 		location /ui/ {
 			try_files $uri $uri/ /ui/index.html;
+		}
+
+		location / {
+			return 301 $scheme://$host/ui/;
 		}
 	}
 }
