--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -7,5 +7,4 @@ COPY . .
 RUN npm run build
 
 FROM nginx:1.21.6-alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY ieee-money-prod.conf /etc/nginx/nginx.conf
+COPY --from=build /app/dist /usr/share/nginx/html/ui
