--- a/ui/package.json
+++ b/ui/package.json
@@ -1,11 +1,11 @@
 {
   "name": "boilerbooks-ui",
-  "version": "2.0.1",
+  "version": "2.0.0",
   "private": true,
   "license": "Apache 2.0",
   "scripts": {
-    "serve": "vue-cli-service serve --port 3001",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --port 3001 --mode dev",
+    "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
