--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY ["package.json", "package-lock.json", "./"]
 RUN npm ci --include=dev
 COPY . .
-RUN npm run build
+RUN npm run build:dev
 
 FROM nginx:1.21.6-alpine
 COPY --from=build /app/dist /usr/share/nginx/html/ui
