More generic email handling

--- a/api/.env.git
+++ b/api/.env.git
@@ -17,6 +17,10 @@ RECEIPT_BASEDIR=/example/path
 # 'yes' to send, anything else to disable
 SEND_MAIL=yes
 
+# Details for the SMTP server designated for emails
+SMTP_HOST=localhost
+SMTP_PORT=25
+
 # The URL pointing to this server
 #  currently only used on password resets
 HTTP_HOST=localhost
