Added support for phpmyadmin

--- a/config/nginx-prod.conf
+++ b/config/nginx-prod.conf
@@ -36,6 +36,11 @@ http {
 			try_files $uri $uri/ /ui/index.html;
 		}
 
+		location /pma/ {
+			proxy_pass http://pma:80/;
+			proxy_redirect off;
+		}
+
 		location / {
 			return 301 $scheme://$host/ui/;
 		}
