--- a/config/nginx-prod.conf
+++ b/config/nginx-prod.conf
@@ -18,6 +18,7 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 	gzip on;
+	client_max_body_size 10M;
 	server {
 		listen 80 default_server;
 		listen [::]:80 default_server;
