--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,5 @@ jobs:
           mkdir ~/.ssh
           echo "$ssh_key" > ~/.ssh/id_github
           chmod 600 ~/.ssh/id_github
-          ssh ${ssh_user}@${ssh_host} -i ~/.ssh/id_github "echo GH actions working > test.txt"
+          ssh $ssh_user@$ssh_host -i ~/.ssh/id_github "echo GH actions working > test.txt"
           rm ~/.ssh/id_github
