--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,13 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: "Deploy Boiler Books"
-        env:
-          ssh_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          ssh_host: ${{ secrets.SSH_HOST }}
-          ssh_user: ${{ secrets.SSH_USER }}
         run: |
           mkdir ~/.ssh
-          echo "$ssh_key" > ~/.ssh/id_github
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_github
           chmod 600 ~/.ssh/id_github
-          ssh $ssh_user@$ssh_host -i ~/.ssh/id_github "echo GH actions working > test.txt"
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -i ~/.ssh/id_github "echo GH actions working > test.txt"
           rm ~/.ssh/id_github
