--- a/ui/jsconfig.json
+++ b/ui/jsconfig.json
@@ -8,5 +8,8 @@
           "@/*": ["./src/*"],
         }
     },
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist"],
+    "vueCompilerOptions": {
+      "experimentalDisableTemplateSupport": true
+    },
 }
