--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy-boilerbooks
+name: Deploy Boilerbooks
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
       - name: "Install SSH Private Key"
         run: |
           mkdir ~/.ssh
