--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       master
-  pull-request:
+  pull_request:
     types: [opened, reopened, synchronize]
 jobs:
   lint:
