--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,8 @@
     "build:prod": "vue-cli-service build --mode prod"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.22.2",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
