--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for the Purdue IEEE boilerbooks accounting software",
   "main": "src/app.js",
   "private": true,
-  "type":"module",
+  "type": "module",
   "scripts": {
     "serve": "nodemon --exec babel-node src/app.js",
     "lint": "eslint src/ && echo No lint errors found",
@@ -17,21 +17,24 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "jimp": "^0.16.1",
-    "multer": "^1.4.4",
+    "multer": "^1.4.4-lts.1",
     "mysql2": "^2.3.3",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.7.6",
     "uuid": "^8.3.2",
-    "winston": "^3.6.0",
-    "winston-daily-rotate-file": "^4.6.1"
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.0",
-    "@babel/node": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "eslint": "^8.6.0",
-    "nodemon": "^2.0.15"
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "eslint": "^8.19.0",
+    "nodemon": "^2.0.18"
+  },
+  "overrides": {
+    "jpeg-js": "^0.4.4"
   }
 }
