Increased receipt file size and fixed favicon routing

--- a/config/nginx-prod.conf
+++ b/config/nginx-prod.conf
@@ -42,6 +42,10 @@ http {
 			proxy_redirect off;
 		}
 
+		location /favicon.ico {
+			try_files /ui/favicon.ico;
+		}
+
 		location / {
 			return 301 $scheme://$host/ui/;
 		}
