--- a/ui/package.json
+++ b/ui/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vite --mode dev",
-    "dev": "vite preview --mode production",
+    "dev": "vite preview --mode prod",
     "build:dev": "vite build --mode dev",
-    "build:prod": "vite build --mode production",
+    "build:prod": "vite build --mode prod",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore && echo 'No lint errors'"
   },
   "dependencies": {
