--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,11 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 3001 --mode dev",
-    "lint": "vue-cli-service lint",
-    "build:dev": "vue-cli-service build --mode dev",
-    "build:prod": "vue-cli-service build --mode prod"
+    "serve": "vite --mode dev",
+    "dev": "vite preview --mode prod",
+    "build:dev": "vite build --mode dev",
+    "build:prod": "vite build --mode prod",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore && echo 'No lint errors'"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
@@ -16,13 +17,10 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.4",
-    "@vue/cli-service": "~5.0.4",
-    "@vue/compiler-sfc": "^3.2.33",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.7.1"
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "vite": "^3.0.7"
   },
   "license": "Apache 2.0"
 }
