Updated a dev config for Vite and fixed expiry

--- a/config/nginx-dev.conf
+++ b/config/nginx-dev.conf
@@ -1,4 +1,10 @@
 # Boiler Books Dev Envirnoment Config
+
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
@@ -18,6 +24,13 @@ server {
 		proxy_hide_header Access-Control-Allow-Origin;
 		add_header Access-Control-Allow-Origin "http://localhost";
 		proxy_redirect off;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_headder Connection $connection_upgrade;
+		proxy_read_timeout 86400;
+	}
+
+	location / {
+		return 301 $scheme://$host/ui/;
 	}
 
 }
