--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,8 @@
-# Makes github display tabs with the chosen width
+# Makes IDEs display with our preferences
+root = true
+
 [*]  # Choose the types of files here
-indent_style = tab
+indent_style = space
 indent_size = 4
+end_of_line = lf
 # Learned from https://stackoverflow.com/questions/8833953/how-to-change-tab-size-on-github/33831598#33831598
