Purged UTF-8 from any potentially bad areas

--- a/api/.env.git
+++ b/api/.env.git
@@ -23,3 +23,6 @@ SMTP_PORT=25
 
 # The URL pointing to this server
 HTTP_HOST=localhost
+
+# The email for treasurer notifications
+TREAS_EMAIL=test@example.com
