--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jimp": "^0.16.1",
     "multer": "^1.4.4-lts.1",
     "mysql2": "^2.3.3",
