Fix lints and updated git documentation

--- a/api/.env.git
+++ b/api/.env.git
@@ -26,3 +26,11 @@ HTTP_HOST=localhost
 
 # The email for treasurer notifications
 TREAS_EMAIL=test@example.com
+
+# SSO OIDC settings
+USE_OIDC=false
+SESSION_SECRET=supersecret
+OIDC_SERVER=https://example.com
+OIDC_CLIENT_ID=example-client
+OIDC_CLIENT_SECRET=client-secret-here
+OIDC_REDIRECT_URI=http://example.com/callback
