Moved to a production memory store

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /app
 COPY ["package.json", "package-lock.json", "./"]
 RUN npm ci --production
 COPY . .
-CMD [ "node", "src/app.js" ]
+CMD [ "node", "src/server.js" ]
