--- a/api/package.json
+++ b/api/package.json
@@ -20,12 +20,11 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jimp": "^0.16.1",
+    "memorystore": "^1.6.7",
     "multer": "^1.4.4-lts.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
     "openid-client": "^5.1.9",
-    "passport": "^0.6.0",
-    "passport-http-bearer": "^1.0.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
