--- a/api/package.json
+++ b/api/package.json
@@ -2,11 +2,11 @@
   "name": "boilerbooks-api",
   "version": "2.0.0",
   "description": "Backend API for the Purdue IEEE boilerbooks accounting software",
-  "main": "src/app.js",
+  "main": "src/server.js",
   "private": true,
   "type": "module",
   "scripts": {
-    "serve": "nodemon --exec babel-node src/app.js",
+    "serve": "nodemon --exec babel-node src/server.js",
     "lint": "eslint src/ && echo No lint errors found",
     "build": "babel --env-name build src -d dist"
   },
@@ -18,10 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "jimp": "^0.16.1",
+    "memorystore": "^1.6.7",
     "multer": "^1.4.4-lts.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
+    "openid-client": "^5.1.9",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
