--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,7 @@
     "dev": "vite preview --mode prod",
     "build:dev": "vite build --mode dev",
     "build:prod": "vite build --mode prod",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore && echo 'No lint errors'"
+    "lint": "eslint src/ --ext .js,.vue --ignore-path .gitignore && echo 'No lint errors'"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
