Added a vscode devcontainer

--- a/config/nginx-dev.conf
+++ b/config/nginx-dev.conf
@@ -25,7 +25,7 @@ server {
 		add_header Access-Control-Allow-Origin "http://localhost";
 		proxy_redirect off;
 		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_headder Connection $connection_upgrade;
+		proxy_set_header Connection $connection_upgrade;
 		proxy_read_timeout 86400;
 	}
 
