--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,20 @@
 	"postCreateCommand": ".devcontainer/postCreateCommand.sh",
 
 	// We use 8080 here to avoid any permission errors
-	"appPort": "8080:80"
+	"appPort": "8080:80",
+
+	// Some extensions are really nice to have
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Vue.volar",
+				"mikestead.dotenv"
+			]
+		}
+	},
+
+	// Don't bother forwarding ports we don't need
+	"otherPortsAttributes": {
+		"onAutoForward": "ignore"
+	}
 }
