Revert adding version string to UI

--- a/ui/package.json
+++ b/ui/package.json
@@ -3,11 +3,10 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "vstring": "echo VITE_VERSION_STRING=$(git describe --tags --abbrev=0)-$(git rev-parse --abbrev-ref HEAD)-$(git rev-parse --short HEAD) > src/environment/.env.local",
-    "serve": "npm run vstring && vite --mode dev",
+    "serve": "vite --mode dev",
     "dev": "vite preview --mode prod",
-    "build:dev": "npm run vstring && vite build --mode dev",
-    "build:prod": "npm run vstring && vite build --mode prod",
+    "build:dev": "vite build --mode dev",
+    "build:prod": "vite build --mode prod",
     "lint": "eslint src/ --ext .js,.vue --ignore-path .gitignore && echo 'No lint errors'"
   },
   "dependencies": {
