--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: "Install SSH Private Key"
         run: |
           mkdir ~/.ssh
@@ -20,7 +22,7 @@ jobs:
       - name: "Embed Version String"
         run: |
           echo VITE_VERSION_STRING=$(git describe --tags --abbrev=0)-$(git rev-parse --abbrev-ref HEAD)-$(git rev-parse --short HEAD) > .env.local
-          rsync .env.local ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEPLOY_DIRECTORY }}/boilerbooks/ui/.env.local
+          rsync -e "ssh -i ~/.ssh/id_github" .env.local ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEPLOY_DIRECTORY }}/boilerbooks/ui/.env.local
       - name: "Deploy Boiler Books"
         run: ssh ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} -i ~/.ssh/id_github "cd ${{ secrets.DEPLOY_DIRECTORY }}; docker-compose up --build -d;"
       - name: "Clean SSH Key"
