Another update to the dataset

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,7 @@ COPY config/sql-setup.sql  /tmp/config/
 COPY config/nginx-dev.conf /tmp/config/
 
 COPY .devcontainer/sample-data.sql /tmp/config/sample-data.sql
+COPY .devcontainer/aliases /etc/aliases
 
 RUN echo "postfix postfix/mailname string localhost" | debconf-set-selections\
     && echo "postfix postfix/main_mailer_type string 'Internet Site'" | debconf-set-selections
@@ -14,6 +15,7 @@ RUN apt update && export DEBIAN_FRONTEND=noninteractive \
 RUN service mariadb start && mariadb < /tmp/config/ieee-money.sql && mariadb < /tmp/config/sql-setup.sql
 RUN mv /tmp/config/nginx-dev.conf /etc/nginx/sites-enabled/default \
     && service nginx reload
+RUN service postfix start && newaliases
 
 RUN mkdir /var/log/boilerbooks && chown node:node /var/log/boilerbooks
 RUN mkdir /var/www/receipts && chown node:node /var/www/receipts
