--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           context: ./api
           push: true
-          tags: ${{ steps.meta.outputs.label }}
+          tags: ${{ steps.meta.outputs.tags }}
