--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME_API: ${{ github.repository }}-api
+  IMAGE_NAME_UI: ${{ github.repository }}-ui
 
 jobs:
   build-and-push-api:
@@ -16,7 +17,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -30,7 +30,11 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{env.IMAGE_NAME_API }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver, pattern={{major}}
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
