--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,35 @@ jobs:
           context: ./api
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+
+  build-and-push-ui:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Log in to Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{env.IMAGE_NAME_UI }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver, pattern={{major}}
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./api
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
