Include UI dev builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Create and Publish Docker Images
+name: Create Docker Images
 on:
   push:
     branches:
@@ -12,7 +12,7 @@ env:
   IMAGE_NAME_UI: ${{ github.repository }}-ui
 
 jobs:
-  build-and-push-api:
+  build-push-api:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -44,7 +44,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
 
-  build-and-push-ui:
+  build-push-ui-prod:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -72,6 +72,40 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ./api
+          context: ./ui
+          file: Dockerfile.prod
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+
+  build-push-ui-dev:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Log in to Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{env.IMAGE_NAME_UI }}
+          flavor: |
+            suffix=-dev,onlatest-true
+          tags: |
+            type=ref,event=branch
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./ui
+          file: Dockerfile.dev
           push: true
           tags: ${{ steps.meta.outputs.tags }}
