Removed several references to IEEE

--- a/api/.env.git
+++ b/api/.env.git
@@ -20,6 +20,7 @@ SEND_MAIL=yes
 # Details for the SMTP server designated for emails
 SMTP_HOST=localhost
 SMTP_PORT=25
+SMTP_FROM=boilerbooks@example.com
 
 # The URL pointing to this server
 HTTP_HOST=localhost
