--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boilerbooks-ui",
-  "version": "2.0.0",
+  "version": "2.2",
+  "description": "Frontend UI for the Boiler Books accounting software",
   "private": true,
   "scripts": {
     "vstring": "echo VITE_VERSION_STRING=$(git describe --tags --abbrev=0)-$(git rev-parse --abbrev-ref HEAD)-$(git rev-parse --short HEAD) > src/environment/.env.local",
