--- a/ui/src/environment/.env.dev
+++ b/ui/src/environment/.env.dev
@@ -1,3 +1,3 @@
 VITE_USE_OIDC=false
-VITE_OIDC_ACCOUNT=https://sso.purdueieee.org/realms/Purdue-IEEE/account/#/
+VITE_OIDC_ACCOUNT=https://example.com
 VITE_OIDC_NAME=Generic SSO
