--- a/api/.env.git
+++ b/api/.env.git
@@ -35,3 +35,8 @@ OIDC_SERVER=https://example.com
 OIDC_CLIENT_ID=example-client
 OIDC_CLIENT_SECRET=client-secret-here
 OIDC_REDIRECT_URI=http://example.com/callback
+
+# UI settings
+UI_NAV_TEXT=Club Name
+UI_NAV_IMAGE=/path/to/image.ext
+UI_NAV_LINK=https://example.com
