Moved login settings to the API

--- a/api/.env.git
+++ b/api/.env.git
@@ -40,3 +40,8 @@ OIDC_REDIRECT_URI=http://example.com/callback
 UI_NAV_TEXT=Club Name
 UI_NAV_IMAGE=/path/to/image.ext
 UI_NAV_LINK=https://example.com
+# - valid options are 'password', 'oidc'
+UI_LOGIN_TYPE=password
+UI_LOGIN_OIDC_NAME=Example Provider
+# - url for OIDC profile management
+UI_LOGIN_OIDC_PROFILE=https://sso.example.com/profile
