--- a/config/docker-compose.sample.yml
+++ b/config/docker-compose.sample.yml
@@ -37,6 +37,9 @@ services:
       UI_NAV_TEXT: 'Club Name'
       UI_NAV_IMAGE: '/path/to/image.ext'
       UI_NAV_LINK: 'https://example.com'
+      UI_LOGIN_TYPE: 'password'
+      UI_LOGIN_OIDC_NAME: 'Example Provider'
+      UI_LOGIN_OIDC_PROFILE: 'https://sso.example.org/profile'
     volumes:
       - ./receipts:/srv/receipts
       - ./assets:/srv/assets
