Add SMTP authentication

--- a/api/.env.git
+++ b/api/.env.git
@@ -20,6 +20,9 @@ SEND_MAIL=yes
 # Details for the SMTP server designated for emails
 SMTP_HOST=localhost
 SMTP_PORT=25
+SMTP_USERNAME=smtp-user
+SMTP_PASSWORD=smtp-password
+SMTP_IGNORE_TLS=true
 
 # The URL pointing to this server
 HTTP_HOST=localhost
