--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,8 @@ jobs:
           images: ${{ env.REGISTRY }}/${{env.IMAGE_NAME_API }}
           tags: |
             type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver, pattern={{major}}
+            type=match,pattern=v\d.\d,group=0
+            type=match,pattern=v(\d).\d,group=1
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
